--- a/Logique/Exercice_logique.ipynb
+++ b/Logique/Exercice_logique.ipynb
@@ -307,6 +307,15 @@
     "    \n",
     "7. On constate que le fichier n’est pas effacé. Que peut-on en déduire ?  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 Le reste de la division euclidienne d’un entier relatif n par 12 est 7.\n",
+    "Quel est le reste de la division euclidienne de n par 3 ? par 4 ?\n",
+    "Quel est le reste de la division euclidienne de – n par 12 ?"
+   ]
   }
  ],
  "metadata": {
