--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -6,9 +6,14 @@
    "source": [
     "## Logique (15 points)\n",
     "\n",
-    "1 . Table de vérité et simplification.  (**3 points**)\n",
+    "1. Table de vérité et simplification.  (**3 points**)\n",
     "\n",
-    "* Etablir la table de vérité de : $$P: (\\overline q\\wedge (p\\vee r))\\implies p$$\n",
+    "On considère la proposition composée :\n",
+    "\n",
+    "$$(\\overline p \\vee q ) \\wedge (\\overline q \\vee r ) \\wedge \\overline{(p \\implies r )}$$\n",
+    "\n",
+    "* Donner la table de vérité de cette proposition. Que remarque-t-on ?\n",
+    "  \n",
     "* Simplifier $P$."
    ]
   },
@@ -16,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2 . Expression Booléenne. (**3 points**)\n",
+    "2. Expression Booléenne. (**3 points**)\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|}\n",
     "\\hline\n",
@@ -41,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3 . Le $\\oplus$ (**3 points**)\n",
+    "3. Le $\\oplus$ (**3 points**)\n",
     "\n",
     "* Ecrire les formules de l'associativité et la commutativité de la disjonction exclusive $\\oplus$.\n",
     "* Simplifier $A \\oplus A$, $A\\oplus 0$.\n",
@@ -64,9 +69,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Etant donnée deux propositions $P$ et $Q$, on définit la proposition \n",
-    "$$(P\\Delta Q) \\iff (\\overline{P} ∧ \\overline{Q}).$$\n",
-    "Exprimer, à l’aide du seul symbole $\\Delta$ les propositions $$P, \\overline{P}, P \\vee Q, P \\wedge Q, P \\implies Q.$$"
+    "5. Fonction inhibition. (** points**)\n",
+    "\n",
+    "Soit la fonction inhibition de a par b,notée * et définie par:\n",
+    "\n",
+    "$$a*b=a\\wedge \\overline{b}$$\n",
+    "\n",
+    "où $a$ et $b$ sont des propositions et $1$ est la tautologie, $0$ l’antilogie.\n",
+    "\n",
+    "* Exprimer $\\overline a$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
+    "\n",
+    "* Exprimer $a \\wedge b$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
+    "  \n",
+    "* Soient $a,b,c$ trois propositions:\n",
+    "  \n",
+    "  * Développer $(a*b)*c$\n",
+    "  \n",
+    "  * Développer $a*(b*c)$\n",
+    "\n",
+    "L’opérateur $*$ est-il associatif ? \n",
+    "\n",
+    "Éventuellement, donner des valeurs de a,b,c pour justifier votre réponse.\n",
+    "\n",
+    "* Exprimer $a \\vee b$ uniquement à l’aide de $1$ et de l’opérateur $*$. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Dans ce texte `ou bien` signifie ou exclusif. \n",
+    "\n",
+    "Soit le raisonnement :\n",
+    "\n",
+    ">  \n",
+    "> S’il y a de l’oxygène alors il y a combustion.  \n",
+    ">  \n",
+    "> Il y a de l’oxygène ou bien il y a de l’azote.  \n",
+    "> \n",
+    "> Il n’y a pas d’azote.  \n",
+    "> \n",
+    "> Donc il y a combustion.  \n",
+    ">  \n",
+    "\n",
+    "1. Écrire ce raisonnement à l’aide des propositions élémentaires o,c,a et des connecteurs logiques.\n",
+    "\n",
+    "2. Simplifier ce raisonnement. Est-il valide ?\n",
+    "\n",
+    "On prendra comme proposition élémentaires : \n",
+    "\n",
+    "o : il y a de l’oxygène  \n",
+    "c : il y a combustion   \n",
+    "a : il y a de l’azote "
    ]
   },
   {
