--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -128,7 +128,100 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Division euclidienne (3 points)\n",
+    "\n",
+    "On considère l’égalité suivante :\n",
+    "\n",
+    "$$ 23 \\times 51 + 35 = 1208$$\n",
+    "\n",
+    "Sans effectuer de division, répondre aux questions suivantes :\n",
+    "\n",
+    "* Quels sont le quotient et le reste de la division de $-1208$ par $51$ ?\n",
+    "  \n",
+    "* Quels sont le quotient et le reste de la division de $1208$ par $23$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tableau \n",
+    "\n",
+    "* Recopier et compléter le tableau de congruence suivant :\n",
+    "\n",
+    "\n",
+    "$$\\begin{array}{|c|c|c|c|c|c|c|}\n",
+    "\\hline\n",
+    "x \\equiv [6] & 0 & 1 & 2 & 3 & 4 & 5 \\\\\n",
+    "\\hline\n",
+    "x^2 \\equiv [6] &  &  &  &  &  &  \\\\\n",
+    "\\hline\n",
+    "x^2+ x + 1  \\equiv [6] &  &  &  &  &  &  \\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "* Quel est l’ensemble des solutions pour que $x^2+ x + 1$ soit divisible par $6$ ?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$d$ et $n$ sont des entiers naturels.\n",
+    "\n",
+    "* Démontrer que si $d divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera le théorème\n",
+    "utilisé.\n",
+    "* Quelles sont les valeurs possibles pour d.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Déterminer les entiers naturels $n$ tel que $n + 4$ divise $3n + 22$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes\n",
+    "respectifs sont 13 et 98.\n",
+    "Quel est cet entier naturel $n$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Congruence\n",
+    "\n",
+    "* Donner suivant les valeurs de l’entier naturel $n$, les restes de la division euclidienne de\n",
+    "$2^n$ par $5$. (On pourra éventuellement donner le résultat par un tableau).\n",
+    "\n",
+    "* En déduire alors le reste de la division euclidienne par 5 de $2012^{2015}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Congruence\n",
+    "\n",
+    "Montrer que $4^4 \\equiv 3 (11)$ puis en déduire que :\n",
+    "pour tout entier naturel $n$, $$4^{4n+2} − 3^{n+3}$$ est divisible par 11.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "."
+   ]
   }
  ],
  "metadata": {
