--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -4,9 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " <table style=\"width:100%;\">\n",
+    "    <tr style=\"display:none\">\n",
+    "        <td></td>\n",
+    "        <td></td>\n",
+    "    </tr>\n",
+    "    <tr style=\"height:3em\">\n",
+    "        <td style=\"width:20%;align:left\"><img src=\"iut_bordeaux.jpg\"></td>\n",
+    "        <td style=\"width:60%;font: bold 2em 'Fira Sans', serif;text-align:center\"> DS 1<br>Arithmétique et logique</td>\n",
+    "        <td style=\"width:20%;font: bold 1.3em 'Fira Sans', serif;vertical-align:top;\">R1.06<br>18 octobre 2023<br>1h30 heures <i></i></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Logique (15 points)\n",
     "\n",
-    "1. Table de vérité et simplification.  (**3 points**)\n",
+    "### Table de vérité et simplification.  (**3 points**)\n",
     "\n",
     "On considère la proposition composée :\n",
     "\n",
@@ -21,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Expression Booléenne. (**3 points**)\n",
+    "### Expression Booléenne. (**3 points**)\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|}\n",
     "\\hline\n",
@@ -46,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Le $\\oplus$ (**3 points**)\n",
+    "### Le $\\oplus$ (**3 points**)\n",
     "\n",
     "* Ecrire les formules de l'associativité et la commutativité de la disjonction exclusive $\\oplus$.\n",
     "* Simplifier $A \\oplus A$, $A\\oplus 0$.\n",
@@ -58,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. (**3 points**)\n",
+    "### Logique (**3 points**)\n",
     "\n",
     "Écrire la négation, la contraposée et la réciproque de l'implication suivante : \n",
     "\n",
@@ -69,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Fonction inhibition. (** points**)\n",
+    "### Fonction inhibition. (**X points**)\n",
     "\n",
     "Soit la fonction inhibition de a par b,notée * et définie par:\n",
     "\n",
@@ -98,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "### Raisonnement (**3 points**)\n",
     "\n",
     "Dans ce texte `ou bien` signifie ou exclusif. \n",
     "\n",
@@ -129,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Division euclidienne (3 points)\n",
+    "### Division euclidienne (**3 points**)\n",
     "\n",
     "On considère l’égalité suivante :\n",
     "\n",
@@ -146,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tableau \n",
+    "### Tableau de congruence (**3 points**)\n",
     "\n",
     "* Recopier et compléter le tableau de congruence suivant :\n",
     "\n",
@@ -169,11 +186,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Divisibilité (**3 points**)\n",
+    "\n",
     "$d$ et $n$ sont des entiers naturels.\n",
     "\n",
-    "* Démontrer que si $d divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera le théorème\n",
-    "utilisé.\n",
-    "* Quelles sont les valeurs possibles pour d.\n"
+    "* Démontrer que si $d$ divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera le théorème utilisé.\n",
+    "  \n",
+    "* Quelles sont les valeurs possibles pour $d$.\n"
    ]
   },
   {
@@ -188,9 +207,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Division euclidienne (**3 points**)\n",
     "\n",
-    "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes\n",
-    "respectifs sont 13 et 98.\n",
+    "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont 13 et 98.\n",
+    "\n",
     "Quel est cet entier naturel $n$ ?"
    ]
   },
@@ -198,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Congruence\n",
+    "### Congruence et reste (**2 points**)\n",
     "\n",
     "* Donner suivant les valeurs de l’entier naturel $n$, les restes de la division euclidienne de\n",
     "$2^n$ par $5$. (On pourra éventuellement donner le résultat par un tableau).\n",
@@ -210,9 +230,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Congruence\n",
+    "### Congruence et divisibilité (**3 points**)\n",
     "\n",
-    "Montrer que $4^4 \\equiv 3 (11)$ puis en déduire que :\n",
+    "Montrer que $$4^4 \\equiv 3 [11]$$ puis en déduire que :\n",
+    "\n",
     "pour tout entier naturel $n$, $$4^{4n+2} − 3^{n+3}$$ est divisible par 11.\n"
    ]
   },
@@ -220,8 +241,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "."
+    "### QCM (**3 points**)\n",
+    "\n",
+    "Indiquez sur votre copie le numéro de la question et la réponse choisie.\n",
+    "\n",
+    "Q1 : Le reste dans la division euclidienne  de $2^{2023}$ par $2$ est :\n",
+    "\n",
+    "> a. 0  \n",
+    "> b. 1  \n",
+    "> c. 2  \n",
+    "> d. sans calculatrice, je ne peux pas savoir.\n",
+    "\n",
+    "\n",
+    "Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :\n",
+    "\n",
+    "> a. un multiple de 5  \n",
+    "> b. impair  \n",
+    "> c. divisible par 2  \n",
+    "> d. divisible par 5  \n",
+    "\n",
+    "Q3 :  La phrase $x \\in \\mathsbb{R}, x^2 -2x-3=0$ est :\n",
+    "\n",
+    "> a. vraie\n",
+    "> b. fausse\n",
+    "> c. un prédicat\n",
+    "> d. une proposition\n",
+    "\n",
+    "Q4 : 2/3 appartient à l'ensemble :\n",
+    "\n",
+    "> a. $\\mathsbb{Q}$\n",
+    "> b. $\\mathsbb{Z}$\n",
+    "> c. $\\mathsbb{N}$\n",
+    "> d. $\\mathsbb{D}$\n",
+    "\n",
+    "\n",
+    "Q5 :  Lequel de ces nombres est un multiple de 11 :\n",
+    "\n",
+    "> a. 524 368\n",
+    "> b. 524 369\n",
+    "> c. 524 370\n",
+    "> d. 524 371\n",
+    "\n",
+    "\n",
+    "Q6 :  soit un un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$. \n",
+    "\n",
+    "> P(x) est suffisant pour Q(x)\n",
+    "> P(x) est nécessaire pour Q(x)\n",
+    "> P(x) est nécessaire et suffisant pour Q(x)\n",
+    "> "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
