--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -21,24 +21,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logique (15 points)\n",
+    "### QCM (3 points)\n",
     "\n",
-    "### Table de vérité et simplification.  (**3 points**)\n",
+    "Indiquez sur votre copie le numéro de la question et la réponse choisie.\n",
     "\n",
-    "On considère la proposition composée :\n",
+    "Q1 : Le reste dans la division euclidienne  de $2^{2023}$ par $2$ est :\n",
     "\n",
-    "$$(\\overline p \\vee q ) \\wedge (\\overline q \\vee r ) \\wedge \\overline{(p \\implies r )}$$\n",
+    "> a. 0  \n",
+    "> b. 1  \n",
+    "> c. 2  \n",
+    "> d. sans calculatrice, je ne peux pas savoir.  \n",
+    " \n",
     "\n",
-    "* Donner la table de vérité de cette proposition. Que remarque-t-on ?\n",
-    "  \n",
-    "* Simplifier $P$."
+    "Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :\n",
+    "\n",
+    "> a. un multiple de 5   \n",
+    "> b. impair    \n",
+    "> c. divisible par 2    \n",
+    "> d. divisible par 5    \n",
+    "\n",
+    "Q3 :  La phrase  \"$x \\in \\mathbb{R}, x^2 -2x-3=0$\"  est :\n",
+    "\n",
+    "> a. vraie  \n",
+    "> b. fausse  \n",
+    "> c. un prédicat  \n",
+    "> d. une proposition  \n",
+    "\n",
+    "Q4 : $\\frac23$ appartient à l'ensemble :\n",
+    "\n",
+    "> a. $\\mathbb{Q}$  \n",
+    "> b. $\\mathbb{Z}$  \n",
+    "> c. $\\mathbb{N}$  \n",
+    "> d. $\\mathbb{D}$  \n",
+    "\n",
+    "\n",
+    "Q5 :  Lequel de ces nombres est un multiple de 11 :\n",
+    "\n",
+    "> a. 524 368  \n",
+    "> b. 524 369  \n",
+    "> c. 524 370  \n",
+    "> d. 524 371  \n",
+    "\n",
+    "\n",
+    "Q6 :  Soit $x$ un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$. \n",
+    "\n",
+    "> a. P(x) est suffisant pour Q(x)  \n",
+    "> b. P(x) est nécessaire pour Q(x)  \n",
+    "> c. P(x) est nécessaire et suffisant pour Q(x)  \n",
+    "> d. P(x) n'est ni nécessaire ni suffisant pour Q(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Expression Booléenne. (**3 points**)\n",
+    "\n",
+    "## Logique (15 points)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCICE 1 : Raisonnement (5 points)\n",
+    "\n",
+    "Dans le texte suivant `ou bien` signifie ou exclusif. \n",
+    "\n",
+    "Le but de cet exercice est de valider (ou non) le raisonnement suivant :\n",
+    "\n",
+    ">  \n",
+    "> S’il y a de l’oxygène alors il y a combustion.  \n",
+    ">  \n",
+    "> Il y a de l’oxygène ou bien il y a de l’azote.  \n",
+    "> \n",
+    "> Il n’y a pas d’azote.  \n",
+    "> \n",
+    "> Donc il y a combustion.  \n",
+    ">  \n",
+    "\n",
+    "On prendra comme proposition élémentaires :  \n",
+    "\n",
+    "> o : il y a de l’oxygène  \n",
+    "> \n",
+    "> c : il y a combustion   \n",
+    "> \n",
+    "> a : il y a de l’azote \n",
+    "\n",
+    "1. Écrire ce raisonnement à l’aide des propositions élémentaires o,c,a et des connecteurs logiques. On ne cherchera pas à le simplifier pour le moment.\n",
+    "   \n",
+    "2. Vérifier en utilisant une table de vérité que : \n",
+    "   \n",
+    "   $$(o \\oplus a) \\wedge \\overline a \\iff ( o \\wedge \\overline a)$$\n",
+    "\n",
+    "3. Simplifier maintenant ce raisonnement. Est-il valide ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCICE 2 : Expression Booléenne. (3 points)\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|}\n",
     "\\hline\n",
@@ -63,11 +145,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Le $\\oplus$ (**3 points**)\n",
+    "### EXERCICE 3 : Le $\\oplus$ (3 points)\n",
     "\n",
-    "* Ecrire les formules de l'associativité et la commutativité de la disjonction exclusive $\\oplus$.\n",
     "* Simplifier $A \\oplus A$, $A\\oplus 0$.\n",
-    "* En citant précisément  la propriété utilisée à chaque étape, démontrer que :\n",
+    "  \n",
+    "* En citant  la propriété utilisée à chaque étape, démontrer que :\n",
     "$$ (A \\oplus B)\\oplus A =B.$$"
    ]
   },
@@ -75,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logique (**3 points**)\n",
+    "### EXERCICE 4 : Logique (**3 points**)\n",
     "\n",
     "Écrire la négation, la contraposée et la réciproque de l'implication suivante : \n",
     "\n",
@@ -86,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fonction inhibition. (**X points**)\n",
+    "### EXERCICE 5 : Fonction inhibition. (3 points)\n",
     "\n",
     "Soit la fonction inhibition de a par b,notée * et définie par:\n",
     "\n",
@@ -106,47 +188,17 @@
     "\n",
     "L’opérateur $*$ est-il associatif ? \n",
     "\n",
-    "Éventuellement, donner des valeurs de a,b,c pour justifier votre réponse.\n",
-    "\n",
-    "* Exprimer $a \\vee b$ uniquement à l’aide de $1$ et de l’opérateur $*$. \n"
+    "Éventuellement, donner des valeurs de $a,b,c$ pour justifier votre réponse.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Raisonnement (**3 points**)\n",
+    "## Arithmétique (**15 points**)\n",
     "\n",
-    "Dans ce texte `ou bien` signifie ou exclusif. \n",
-    "\n",
-    "Soit le raisonnement :\n",
-    "\n",
-    ">  \n",
-    "> S’il y a de l’oxygène alors il y a combustion.  \n",
-    ">  \n",
-    "> Il y a de l’oxygène ou bien il y a de l’azote.  \n",
-    "> \n",
-    "> Il n’y a pas d’azote.  \n",
-    "> \n",
-    "> Donc il y a combustion.  \n",
-    ">  \n",
-    "\n",
-    "1. Écrire ce raisonnement à l’aide des propositions élémentaires o,c,a et des connecteurs logiques.\n",
-    "\n",
-    "2. Simplifier ce raisonnement. Est-il valide ?\n",
-    "\n",
-    "On prendra comme proposition élémentaires : \n",
-    "\n",
-    "o : il y a de l’oxygène  \n",
-    "c : il y a combustion   \n",
-    "a : il y a de l’azote "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Division euclidienne (**3 points**)\n",
+    "### EXERCICE 6 : Division euclidienne (**3 points**)\n",
     "\n",
     "On considère l’égalité suivante :\n",
     "\n",
@@ -163,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tableau de congruence (**3 points**)\n",
+    "### EXERCICE 7 : Tableau de congruences (3 points)\n",
     "\n",
     "* Recopier et compléter le tableau de congruence suivant :\n",
     "\n",
@@ -186,11 +238,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Divisibilité (**3 points**)\n",
+    "### EXERCICE 9 : Divisibilité (3 points)\n",
     "\n",
     "$d$ et $n$ sont des entiers naturels.\n",
     "\n",
-    "* Démontrer que si $d$ divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera le théorème utilisé.\n",
+    "* Démontrer que si $d$ divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera la propriété utilisé.\n",
     "  \n",
     "* Quelles sont les valeurs possibles pour $d$.\n"
    ]
@@ -199,15 +251,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Déterminer les entiers naturels $n$ tel que $n + 4$ divise $3n + 22$\n",
-    "\n"
+    "### EXERCICE 10 : Divisibilité (2 points)\n",
+    "\n",
+    "Déterminer les entiers naturels $n$ tel que $$\\dfrac{3n + 2}{n+4} \\in \\mathbb{N}$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Division euclidienne (**3 points**)\n",
+    "### EXERCICE 11 : Division euclidienne (2 points)\n",
     "\n",
     "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont 13 et 98.\n",
     "\n",
@@ -218,83 +271,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Congruence et reste (**2 points**)\n",
-    "\n",
-    "* Donner suivant les valeurs de l’entier naturel $n$, les restes de la division euclidienne de\n",
-    "$2^n$ par $5$. (On pourra éventuellement donner le résultat par un tableau).\n",
-    "\n",
-    "* En déduire alors le reste de la division euclidienne par 5 de $2012^{2015}$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Congruence et divisibilité (**3 points**)\n",
+    "### EXERCICE 12 : Congruence et divisibilité (3 points)\n",
     "\n",
     "Montrer que $$4^4 \\equiv 3 [11]$$ puis en déduire que :\n",
     "\n",
     "pour tout entier naturel $n$, $$4^{4n+2} − 3^{n+3}$$ est divisible par 11.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### QCM (**3 points**)\n",
-    "\n",
-    "Indiquez sur votre copie le numéro de la question et la réponse choisie.\n",
-    "\n",
-    "Q1 : Le reste dans la division euclidienne  de $2^{2023}$ par $2$ est :\n",
-    "\n",
-    "> a. 0  \n",
-    "> b. 1  \n",
-    "> c. 2  \n",
-    "> d. sans calculatrice, je ne peux pas savoir.\n",
-    "\n",
-    "\n",
-    "Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :\n",
-    "\n",
-    "> a. un multiple de 5  \n",
-    "> b. impair  \n",
-    "> c. divisible par 2  \n",
-    "> d. divisible par 5  \n",
-    "\n",
-    "Q3 :  La phrase $x \\in \\mathsbb{R}, x^2 -2x-3=0$ est :\n",
-    "\n",
-    "> a. vraie\n",
-    "> b. fausse\n",
-    "> c. un prédicat\n",
-    "> d. une proposition\n",
-    "\n",
-    "Q4 : 2/3 appartient à l'ensemble :\n",
-    "\n",
-    "> a. $\\mathsbb{Q}$\n",
-    "> b. $\\mathsbb{Z}$\n",
-    "> c. $\\mathsbb{N}$\n",
-    "> d. $\\mathsbb{D}$\n",
-    "\n",
-    "\n",
-    "Q5 :  Lequel de ces nombres est un multiple de 11 :\n",
-    "\n",
-    "> a. 524 368\n",
-    "> b. 524 369\n",
-    "> c. 524 370\n",
-    "> d. 524 371\n",
-    "\n",
-    "\n",
-    "Q6 :  soit un un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$. \n",
-    "\n",
-    "> P(x) est suffisant pour Q(x)\n",
-    "> P(x) est nécessaire pour Q(x)\n",
-    "> P(x) est nécessaire et suffisant pour Q(x)\n",
-    "> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
