--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -11,8 +11,8 @@
     "    </tr>\n",
     "    <tr style=\"height:3em\">\n",
     "        <td style=\"width:20%;align:left\"><img src=\"iut_bordeaux.jpg\"></td>\n",
-    "        <td style=\"width:60%;font: bold 2em 'Fira Sans', serif;text-align:center\"> DS 1<br>Arithmétique et logique</td>\n",
-    "        <td style=\"width:20%;font: bold 1.3em 'Fira Sans', serif;vertical-align:top;\">R1.06<br>18 octobre 2023<br>1h30 heures <i></i></td>\n",
+    "        <td style=\"width:60%;font: bold 2em 'Fira Sans', serif;text-align:center\"> DS 1<br>Arithmétique et logique<br>Sans calculatrice</td>\n",
+    "        <td style=\"width:20%;font: bold 1.3em 'Fira Sans', serif;vertical-align:top;\">R1.06<br>18 octobre 2023<br>1h30 <i></i></td>\n",
     "    </tr>\n",
     "</table>"
    ]
@@ -35,24 +35,24 @@
     "\n",
     "Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :\n",
     "\n",
-    "> a. un multiple de 5   \n",
-    "> b. impair    \n",
-    "> c. divisible par 2    \n",
-    "> d. divisible par 5    \n",
+    "> a. un multiple de 5.   \n",
+    "> b. impair.  \n",
+    "> c. divisible par 2.    \n",
+    "> d. divisible par 5.    \n",
     "\n",
     "Q3 :  La phrase  \"$x \\in \\mathbb{R}, x^2 -2x-3=0$\"  est :\n",
     "\n",
-    "> a. vraie  \n",
-    "> b. fausse  \n",
-    "> c. un prédicat  \n",
-    "> d. une proposition  \n",
+    "> a. vraie.  \n",
+    "> b. fausse.  \n",
+    "> c. un prédicat.  \n",
+    "> d. une proposition.  \n",
     "\n",
     "Q4 : $\\frac23$ appartient à l'ensemble :\n",
     "\n",
-    "> a. $\\mathbb{Q}$  \n",
-    "> b. $\\mathbb{Z}$  \n",
-    "> c. $\\mathbb{N}$  \n",
-    "> d. $\\mathbb{D}$  \n",
+    "> a. $\\mathbb{Q}$.  \n",
+    "> b. $\\mathbb{Z}$.  \n",
+    "> c. $\\mathbb{N}$.  \n",
+    "> d. $\\mathbb{D}$.  \n",
     "\n",
     "\n",
     "Q5 :  Lequel de ces nombres est un multiple de 11 :\n",
@@ -65,10 +65,10 @@
     "\n",
     "Q6 :  Soit $x$ un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$. \n",
     "\n",
-    "> a. P(x) est suffisant pour Q(x)  \n",
-    "> b. P(x) est nécessaire pour Q(x)  \n",
-    "> c. P(x) est nécessaire et suffisant pour Q(x)  \n",
-    "> d. P(x) n'est ni nécessaire ni suffisant pour Q(x)"
+    "> a. P(x) est suffisant pour Q(x).  \n",
+    "> b. P(x) est nécessaire pour Q(x).  \n",
+    "> c. P(x) est nécessaire et suffisant pour Q(x).  \n",
+    "> d. P(x) n'est ni nécessaire ni suffisant pour Q(x)."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Logique (15 points)\n"
+    "## Logique (14 points)\n"
    ]
   },
   {
@@ -101,13 +101,11 @@
     "\n",
     "On prendra comme proposition élémentaires :  \n",
     "\n",
-    "> o : il y a de l’oxygène  \n",
-    "> \n",
-    "> c : il y a combustion   \n",
-    "> \n",
-    "> a : il y a de l’azote \n",
+    "> $o$ : il y a de l’oxygène  \n",
+    "> $c$ : il y a combustion   \n",
+    "> $a$ : il y a de l’azote \n",
     "\n",
-    "1. Écrire ce raisonnement à l’aide des propositions élémentaires o,c,a et des connecteurs logiques. On ne cherchera pas à le simplifier pour le moment.\n",
+    "1. Écrire ce raisonnement à l’aide des propositions élémentaires $o,c,a$ et des connecteurs logiques. On ne cherchera pas à le simplifier pour le moment.\n",
     "   \n",
     "2. Vérifier en utilisant une table de vérité que : \n",
     "   \n",
@@ -120,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 2 : Expression Booléenne. (3 points)\n",
+    "### EXERCICE 2 : Expression Booléenne (3 points)\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|}\n",
     "\\hline\n",
@@ -145,30 +143,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 3 : Le $\\oplus$ (3 points)\n",
-    "\n",
-    "* Simplifier $A \\oplus A$, $A\\oplus 0$.\n",
-    "  \n",
-    "* En citant  la propriété utilisée à chaque étape, démontrer que :\n",
-    "$$ (A \\oplus B)\\oplus A =B.$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### EXERCICE 4 : Logique (**3 points**)\n",
+    "### EXERCICE 3 : Logique (3 points)\n",
     "\n",
     "Écrire la négation, la contraposée et la réciproque de l'implication suivante : \n",
     "\n",
-    "> « Si j'ai plus de 10 de moyenne et pas de note en dessous de 8, alors je réussis mon année. »"
+    "> Si j'ai plus de 10 de moyenne et pas de note en dessous de 8, alors je réussis mon année."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 5 : Fonction inhibition. (3 points)\n",
+    "### EXERCICE 4 : Fonction inhibition. (3 points)\n",
     "\n",
     "Soit la fonction inhibition de a par b,notée * et définie par:\n",
     "\n",
@@ -177,17 +163,11 @@
     "où $a$ et $b$ sont des propositions et $1$ est la tautologie, $0$ l’antilogie.\n",
     "\n",
     "* Exprimer $\\overline a$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
-    "\n",
     "* Exprimer $a \\wedge b$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
-    "  \n",
     "* Soient $a,b,c$ trois propositions:\n",
-    "  \n",
     "  * Développer $(a*b)*c$\n",
-    "  \n",
     "  * Développer $a*(b*c)$\n",
-    "\n",
     "L’opérateur $*$ est-il associatif ? \n",
-    "\n",
     "Éventuellement, donner des valeurs de $a,b,c$ pour justifier votre réponse.\n",
     "\n"
    ]
@@ -196,9 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arithmétique (**15 points**)\n",
+    "## Arithmétique (14 points)\n",
     "\n",
-    "### EXERCICE 6 : Division euclidienne (**3 points**)\n",
+    "### EXERCICE 5 : Division euclidienne (2 points)\n",
     "\n",
     "On considère l’égalité suivante :\n",
     "\n",
@@ -215,14 +195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 7 : Tableau de congruences (3 points)\n",
+    "### EXERCICE 6 : Tableau de congruences (2 points)\n",
     "\n",
     "* Recopier et compléter le tableau de congruence suivant :\n",
     "\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|c|c|c|}\n",
     "\\hline\n",
-    "x \\equiv [6] & 0 & 1 & 2 & 3 & 4 & 5 \\\\\n",
+    "x \\equiv [6] &  &  &  &  &  &  \\\\\n",
     "\\hline\n",
     "x^2 \\equiv [6] &  &  &  &  &  &  \\\\\n",
     "\\hline\n",
@@ -238,20 +218,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 9 : Divisibilité (3 points)\n",
+    "### EXERCICE 7 : Divisibilité (2 points)\n",
     "\n",
     "$d$ et $n$ sont des entiers naturels.\n",
     "\n",
-    "* Démontrer que si $d$ divise $9n + 2$ et $7n − 3$, alors $d$ divise $41$. On citera la propriété utilisé.\n",
+    "* Démontrer que si $d$ divise $4n + 5$ et $6n + 3$, alors $d$ divise $9$. On citera la propriété utilisée.\n",
     "  \n",
-    "* Quelles sont les valeurs possibles pour $d$.\n"
+    "* Quelles sont les valeurs possibles pour $d$ ?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 10 : Divisibilité (2 points)\n",
+    "### EXERCICE 8 : Divisibilité (2 points)\n",
     "\n",
     "Déterminer les entiers naturels $n$ tel que $$\\dfrac{3n + 2}{n+4} \\in \\mathbb{N}$$\n"
    ]
@@ -260,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 11 : Division euclidienne (2 points)\n",
+    "### EXERCICE 9 : Division euclidienne (2 points)\n",
     "\n",
     "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont 13 et 98.\n",
     "\n",
@@ -271,12 +251,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 12 : Congruence et divisibilité (3 points)\n",
+    "### EXERCICE 10 : Congruence et divisibilité (2 points)\n",
     "\n",
-    "Montrer que $$4^4 \\equiv 3 [11]$$ puis en déduire que :\n",
-    "\n",
-    "pour tout entier naturel $n$, $$4^{4n+2} − 3^{n+3}$$ est divisible par 11.\n"
+    "Montrer que pour tout entier naturel n, $-2\\times 3^{2n + 2} + 2^{4n + 2}$ est divisible par 7.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCICE 11 : Congruence et divisibilité (2 points)\n",
+    "\n",
+    "Calculer $79^{2023} [7]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
