--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -202,11 +202,11 @@
     "\n",
     "$$\\begin{array}{|c|c|c|c|c|c|c|}\n",
     "\\hline\n",
-    "x \\equiv [6] &  &  &  &  &  &  \\\\\n",
+    "x \\equiv \\dots [6] &  &  &  &  &  &  \\\\\n",
     "\\hline\n",
-    "x^2 \\equiv [6] &  &  &  &  &  &  \\\\\n",
+    "x^2 \\equiv \\dots [6] &  &  &  &  &  &  \\\\\n",
     "\\hline\n",
-    "x^2+ x + 1  \\equiv [6] &  &  &  &  &  &  \\\\\n",
+    "x^2+ x + 1  \\equiv \\dots [6] &  &  &  &  &  &  \\\\\n",
     "\\hline\n",
     "\\end{array}\n",
     "$$\n",
@@ -233,7 +233,7 @@
    "source": [
     "### EXERCICE 8 : Divisibilité (2 points)\n",
     "\n",
-    "Déterminer les entiers naturels $n$ tel que $$\\dfrac{3n + 2}{n+4} \\in \\mathbb{N}$$\n"
+    "Déterminer les couples d'entiers relatifs $(x;y)$ tels que $x^2 -16 y^2=-7$.\n"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "source": [
     "### EXERCICE 10 : Congruence et divisibilité (2 points)\n",
     "\n",
-    "Montrer que pour tout entier naturel n, $-2\\times 3^{2n + 2} + 2^{4n + 2}$ est divisible par 7.\n"
+    "Montrer que pour tout entier naturel $n$, $-2\\times 3^{2n + 2} + 2^{4n + 2}$ est divisible par 7.\n"
    ]
   },
   {
@@ -264,11 +264,6 @@
     "\n",
     "Calculer $79^{2023} [7]$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
