--- a/devoir 2023/DS1.ipynb
+++ b/devoir 2023/DS1.ipynb
@@ -33,7 +33,7 @@
     "> d. sans calculatrice, je ne peux pas savoir.  \n",
     " \n",
     "\n",
-    "Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :\n",
+    "Q2 : Pour tout  $k$  entier relatif, le nombre $2k+5$ est :\n",
     "\n",
     "> a. un multiple de 5.   \n",
     "> b. impair.  \n",
@@ -65,10 +65,10 @@
     "\n",
     "Q6 :  Soit $x$ un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$. \n",
     "\n",
-    "> a. P(x) est suffisant pour Q(x).  \n",
-    "> b. P(x) est nécessaire pour Q(x).  \n",
-    "> c. P(x) est nécessaire et suffisant pour Q(x).  \n",
-    "> d. P(x) n'est ni nécessaire ni suffisant pour Q(x)."
+    "> a. $P(x)$ est suffisant pour $Q(x)$.  \n",
+    "> b. $P(x)$ est nécessaire pour $Q(x)$.  \n",
+    "> c. $P(x)$ est nécessaire et suffisant pour $Q(x)$.  \n",
+    "> d. $P(x)$ n'est ni nécessaire ni suffisant pour $Q(x)$."
    ]
   },
   {
@@ -91,13 +91,10 @@
     "\n",
     ">  \n",
     "> S’il y a de l’oxygène alors il y a combustion.  \n",
-    ">  \n",
     "> Il y a de l’oxygène ou bien il y a de l’azote.  \n",
-    "> \n",
     "> Il n’y a pas d’azote.  \n",
     "> \n",
     "> Donc il y a combustion.  \n",
-    ">  \n",
     "\n",
     "On prendra comme proposition élémentaires :  \n",
     "\n",
@@ -118,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 2 : Expression Booléenne (3 points)\n",
+    "### EXERCICE 2 : Expression logique (3 points)\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|}\n",
     "\\hline\n",
@@ -156,20 +153,19 @@
    "source": [
     "### EXERCICE 4 : Fonction inhibition. (3 points)\n",
     "\n",
-    "Soit la fonction inhibition de a par b,notée * et définie par:\n",
+    "Soit la fonction inhibition de $a$ par $b$,notée $*$ et définie par:\n",
     "\n",
     "$$a*b=a\\wedge \\overline{b}$$\n",
     "\n",
     "où $a$ et $b$ sont des propositions et $1$ est la tautologie, $0$ l’antilogie.\n",
     "\n",
-    "* Exprimer $\\overline a$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
-    "* Exprimer $a \\wedge b$ uniquement à l’aide de $1$ et de l’opérateur $*$.\n",
-    "* Soient $a,b,c$ trois propositions:\n",
-    "  * Développer $(a*b)*c$\n",
-    "  * Développer $a*(b*c)$\n",
-    "L’opérateur $*$ est-il associatif ? \n",
-    "Éventuellement, donner des valeurs de $a,b,c$ pour justifier votre réponse.\n",
-    "\n"
+    "1. En utilisant  $1,a,b$ et uniquement l'opérateur $*$ :  \n",
+    "  a. Exprimer $\\overline a$.  \n",
+    "  b. Exprimer $a \\wedge b$.  \n",
+    "2. Soient $a,b,c$ trois propositions:  \n",
+    "  a. Développer $(a*b)*c$  \n",
+    "  b. Développer $a*(b*c)$    \n",
+    "  c. L’opérateur $*$ est-il associatif ?  Si non, donner un contre-exemple.    \n"
    ]
   },
   {
@@ -184,20 +180,30 @@
     "\n",
     "$$ 23 \\times 51 + 35 = 1208$$\n",
     "\n",
-    "Sans effectuer de division, répondre aux questions suivantes :\n",
+    "Sans effectuer de division, répondre aux questions suivantes en justifiant :  \n",
     "\n",
-    "* Quels sont le quotient et le reste de la division de $-1208$ par $51$ ?\n",
-    "  \n",
-    "* Quels sont le quotient et le reste de la division de $1208$ par $23$ ?"
+    "1. Quels sont le quotient et le reste de la division de $-1208$ par $51$ ?\n",
+    "2. Quels sont le quotient et le reste de la division de $1208$ par $23$ ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 6 : Tableau de congruences (2 points)\n",
+    "### EXERCICE 6 : Division euclidienne (2 points)\n",
     "\n",
-    "* Recopier et compléter le tableau de congruence suivant :\n",
+    "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont $13$ et $98$.\n",
+    "\n",
+    "Quel est cet entier naturel $n$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCICE 7 : Tableau de congruences (2 points)\n",
+    "\n",
+    "  1. Recopier et compléter le tableau de congruence suivant :\n",
     "\n",
     "\n",
     "$$\\begin{array}{|c|c|c|c|c|c|c|}\n",
@@ -211,20 +217,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "* Quel est l’ensemble des solutions pour que $x^2+ x + 1$ soit divisible par $6$ ?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### EXERCICE 7 : Divisibilité (2 points)\n",
-    "\n",
-    "$d$ et $n$ sont des entiers naturels.\n",
-    "\n",
-    "* Démontrer que si $d$ divise $4n + 5$ et $6n + 3$, alors $d$ divise $9$. On citera la propriété utilisée.\n",
-    "  \n",
-    "* Quelles sont les valeurs possibles pour $d$ ?\n"
+    "2. Quel est l’ensemble des solutions pour que $x^2+ x + 1$ soit divisible par $6$ ?\n"
    ]
   },
   {
@@ -233,18 +226,20 @@
    "source": [
     "### EXERCICE 8 : Divisibilité (2 points)\n",
     "\n",
-    "Déterminer les couples d'entiers relatifs $(x;y)$ tels que $x^2 -16 y^2=-7$.\n"
+    "$d$ et $n$ sont des entiers naturels.\n",
+    "\n",
+    "1. Démontrer que si $d$ divise $4n + 5$ et $6n + 3$, alors $d$ divise $9$. On citera la propriété utilisée.\n",
+    "  \n",
+    "2. Quelles sont les valeurs possibles pour $d$ ?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 9 : Division euclidienne (2 points)\n",
+    "### EXERCICE 9 : Divisibilité (2 points)\n",
     "\n",
-    "On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont 13 et 98.\n",
-    "\n",
-    "Quel est cet entier naturel $n$ ?"
+    "Déterminer les couples d'entiers relatifs $(x;y)$ tels que $x^2 -16 y^2=-7$.\n"
    ]
   },
   {
@@ -260,9 +255,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCICE 11 : Congruence et divisibilité (2 points)\n",
+    "### EXERCICE 11 : Congruence (2 points)\n",
     "\n",
-    "Calculer $79^{2023} [7]$"
+    "Calculer $79^{2023} [7]$."
    ]
   }
  ],
