--- a/Arithmétique/A1-DivisionEuclidienne.ipynb
+++ b/Arithmétique/A1-DivisionEuclidienne.ipynb
@@ -178,6 +178,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$xyz=100x+10y+z$ par exemple $324=100\\times 3+10\\times 2+4$.  \n",
+    "ainsi $zxy=100z+10x+y$ et $yzx=100y+10z+x$.  \n",
+    "donc $xyz+zxy+yzx=111(x+y+z)$ est un multiple de $111$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -283,6 +293,21 @@
     ">\n",
     ">Montrer que $m = ±1$.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "m divise $8n + 7$ et $6n + 5$ donc $m$ divise $2(8n + 7) − 3(6n + 5) = 1$.\n",
+    "ainsi dans $\\mathbb{Z}^* ,\\quad m = ±1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -442,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
