--- a/Arithmétique/A2-Congruence partie 2.ipynb
+++ b/Arithmétique/A2-Congruence partie 2.ipynb
@@ -173,6 +173,34 @@
     "Calculer $234^{97} [7]$\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$234 \\equiv 2 [7]$ donc $234^{97} \\equiv 2^{97} [7]$  \n",
+    "\n",
+    "On décompose 97 en base 2 : $97 = 64 + 32 + 1$ donc \n",
+    "\n",
+    "$234^{97} \\equiv 2^{64} \\times 2^{32} \\times 2 [7]$\n",
+    "\n",
+    "On calcule ensuite les différentes puissances de 2 modulo 7 :\n",
+    "\n",
+    "$2 \\equiv 2 [7]$  \n",
+    "$2^2 \\equiv 4 [7]$  \n",
+    "$2^4 \\equiv 2^2 \\times 2^2 \\equiv 4 \\times 4 \\equiv 2 [7]$  \n",
+    "$2^8 \\equiv 2^4 \\times 2^4 \\equiv 2 \\times 2 \\equiv 4 [7]$  \n",
+    "$2^{16} \\equiv 2^8 \\times 2^8 \\equiv 4 \\times 4 \\equiv 2 [7]$  \n",
+    "$2^{32} \\equiv 2^{16} \\times 2^{16} \\equiv 2 \\times 2 \\equiv 4 [7]$  \n",
+    "$2^{64} \\equiv 2^{32} \\times 2^{32} \\equiv 4 \\times 4 \\equiv 2 [7]$  \n",
+    "\n",
+    "On en déduit que $234^{97} \\equiv 2^{64} \\times 2^{32} \\times 2 [7] \\equiv 2 \\times 4 \\times 2 [7] \\equiv 2 [7] $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
