--- a/Arithmétique/A1-DivisionEuclidienne.ipynb
+++ b/Arithmétique/A1-DivisionEuclidienne.ipynb
@@ -246,14 +246,12 @@
    "source": [
     "#### Exercice 5\n",
     "\n",
-    "<!--\n",
-    "1. Pour k un entier naturel non-nul développer l’expression : $A=(2k+1)^2-1$\n",
-    "    Justifier que A est un multiple de 8.\n",
     "\n",
-    "2. On considère l’ expression $B =n^2−1$ pour $n\\in \\mathbb{N}^*$\n",
+    "\n",
+    "1. On considère l’ expression $B =n^2−1$ pour $n\\in \\mathbb{N}^*$\n",
     "\n",
     "    a. Démontrer que pour n pair, B est impair.  \n",
-    "    b. Démontrer que pour n un entier impair strictement supérieur à 1, B est pair et divisible par 8.-->\n",
+    "    b. Démontrer que pour n un entier impair strictement supérieur à 1, B est pair et divisible par 8.\n",
     "\n",
     ">1. L’exercice consiste à trouver les valeurs du naturel $n > 4$ pour lesquelles la fraction $\\dfrac{n + 17}{n − 4}$ est un entier.\n",
     ">\n",
@@ -365,7 +363,7 @@
    },
    "outputs": [],
    "source": [
-    "def division(a,b):\n",
+    "def division(a:int,b:int)->tuple[int,int]:\n",
     "    init=a\n",
     "    q=0\n",
     "    while ...:\n",
@@ -416,7 +414,7 @@
     "\n",
     "from math import sqrt,floor\n",
     "\n",
-    "def diviseur1(n):\n",
+    "def diviseur1(n:int)->list[int]:\n",
     "    L=[]\n",
     "\n",
     "    return L\n",
@@ -427,7 +425,7 @@
     "\n",
     "# En plus condensé\n",
     "\n",
-    "def diviseur2(n): \n",
+    "def diviseur2(n:int)->list[int]: \n",
     "    return [i for i in range(1,n+1) if n%i==0] \n",
     "\n",
     "print(diviseur2(100))\n",
@@ -435,10 +433,10 @@
     "# Bonus : proposer une amélioration à cette fonction pour ne plus parcourir \n",
     "# toutes les valeurs jusque n. (critère d'arrêt)\n",
     "\n",
-    "def diviseur_ameliore(n):\n",
+    "def diviseur_ameliore(n:int)->list[int]:\n",
     "    L=[]\n",
     "\n",
-    "    return L;\n",
+    "    return L\n",
     "print(diviseur_ameliore(12331212332222))"
    ]
   },
