--- a/TP/TP2_arithmetique/TP2.ipynb
+++ b/TP/TP2_arithmetique/TP2.ipynb
@@ -84,24 +84,24 @@
     "\n",
     "Tout d’abord on décompose l’exposant k = 154 en base 2 : \n",
     "\n",
-    "> $(154)_{10}=$\n",
+    "> $(154)_{10}= 128+16+8+2=2+2^3+2^4+2^7$\n",
     "\n",
     "On en déduit la décompostion en somme de puissance de 2.\n",
     "\n",
-    "> $154 =$\n",
+    "> $154 =(10011010)_2$\n",
     "\n",
     "Ensuite on calcule $17,17^2,17^4,17^8,... ( 100)$\n",
     "\n",
     ">$$\n",
     "\\begin{align*}\n",
-    "17 & \\equiv  \\\\\n",
-    "17^2 & \\equiv  \\\\\n",
-    "17^4 & \\equiv \\\\\n",
-    "17^8  & \\equiv \\\\\n",
-    "17^{16} & \\equiv \\\\\n",
-    "17^{32} & \\equiv \\\\\n",
-    "17^{64}  & \\equiv \\\\\n",
-    "17^{128} & \\equiv \\\\\n",
+    "17 & \\equiv  17\\\\\n",
+    "17^2 & \\equiv  89\\\\\n",
+    "17^4 & \\equiv 21\\\\\n",
+    "17^8  & \\equiv 41\\\\\n",
+    "17^{16} & \\equiv 81\\\\\n",
+    "17^{32} & \\equiv 61\\\\\n",
+    "17^{64}  & \\equiv 21\\\\\n",
+    "17^{128} & \\equiv 41\\\\\n",
     "\\end{align*}\n",
     "$$"
    ]
