--- a/TP/TP2_arithmetique/TP2-correction.ipynb
+++ b/TP/TP2_arithmetique/TP2-correction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,16 +135,6 @@
       "[5, 11, 9, 11]\n",
       "[17, 89, 21, 41, 81, 61, 21, 41]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +167,7 @@
        "[1, 0, 0, 1, 1, 0, 1, 0]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,16 +192,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "29\n"
+      "3\n"
      ]
     }
    ],
@@ -219,7 +213,7 @@
     "def exponentiation_rapide(p,n,m):\n",
     "    binaire_expo=binaire(n)\n",
     "    binaire_expo.reverse()\n",
-    "    puis=expo(p,len(binaire(n)),m)\n",
+    "    puis=expo(p,len(binaire_expo),m)\n",
     "    result=1;\n",
     "    for pu in range(len(binaire_expo)) :\n",
     "        if binaire_expo[pu]==1:\n",
@@ -228,7 +222,7 @@
     "    return result%m\n",
     "\n",
     "print(exponentiation_rapide(5,11,14))\n",
-    "print(exponentiation_rapide(17,154,100))"
+    "#print(exponentiation_rapide(17,154,100))"
    ]
   },
   {
@@ -319,17 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "139=17*8+3\n",
-      "17=3*5+2\n",
-      "3=2*1+1\n",
-      "2=1*2+0\n"
+      " 139  =  17  *  8   +  3   \n",
+      "  17  =  3   *  5   +  2   \n",
+      "  3   =  2   *  1   +  1   \n",
+      "  2   =  1   *  2   +  0   \n"
      ]
     },
     {
@@ -338,7 +332,7 @@
        "1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +347,7 @@
     "        q=R[k-1]//R[k]\n",
     "        R.append(R[k-1]%R[k])\n",
     "        if trace:\n",
-    "            print(f\"{R[k-1]}={R[k]}*{q}+{R[k+1]}\")\n",
+    "            print(f\"{R[k-1]:^6}={R[k]:^6}*{q:^6}+{R[k+1]:^6}\")\n",
     "        k+=1\n",
     "    return R[k-1]\n",
     "\n",
@@ -664,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
